@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: Schema of both sides of union should match: Column v is of type string on first table and type double on second table
