@@ -49,6 +49,9 @@ Trunk (unreleased changes)
     HIVE-317. Fix HiveServer to accept 1 argument for port.
     (Min Zhou via athusoo)
 
+    HIVE-285. Fix to disallow union of different schemas.
+    (Raghotham Murthy via namit)
+
 Release 0.2.0 - Unreleased
 
   INCOMPATIBLE CHANGES
